<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/text_color"
    android:orientation="vertical"
    tools:context=".Ads.FavouriteFragment">

    <ImageView
        android:src="@drawable/smartvender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />




    <TextView
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/u_dont_like" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />



    <TextView
        android:textSize="19sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collect_thing" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/u_like_post"
        android:textSize="19sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:gravity="center"
        android:text="@string/discover"
        android:textColor="@color/text_color" />

</LinearLayout>