<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".SplashActivitys">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="130dp" />


    <ImageView
        android:src="@drawable/smart_logos"
        android:layout_gravity="center"
        android:id="@+id/imag"
        android:layout_width="200dp"
        android:layout_height="120dp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />


    <TextView
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:textSize="@dimen/app_name"
        android:gravity="center_horizontal"
        android:text="@string/smart_vender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <TextView
        android:textColor="@color/text_color"
        android:textSize="@dimen/app_name"
        android:gravity="center_horizontal"
        android:text="@string/pakistans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text_color"
        android:textSize="@dimen/app_name"
        android:gravity="center_horizontal"
        android:text="@string/build_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>