<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/text_color"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cha_t"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold" />


        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/text_color"
            android:minHeight="?attr/actionBarSize"
            app:tabGravity="fill"
            app:tabMode="fixed">

            <android.support.design.widget.TabItem
                android:id="@+id/selling_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                app:tabBackground="@drawable/tab_background" />

            <android.support.design.widget.TabItem
                android:id="@+id/buying_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buying"
                app:tabBackground="@drawable/tab_background" />

            <android.support.design.widget.TabItem
                android:id="@+id/all_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selling"
                app:tabBackground="@drawable/tab_background" />

        </android.support.design.widget.TabLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>


</LinearLayout>