<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_color">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/text_color"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:text="@string/my_ads"
                android:textSize="25dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:id="@+id/tabs"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.design.widget.TabItem
                app:tabSelectedTextColor="@color/colorAccent"
                android:id="@+id/selling_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ads"
                />

            <android.support.design.widget.TabItem
                app:tabSelectedTextColor="@color/colorAccent"
                android:id="@+id/buying_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite" />

        </android.support.design.widget.TabLayout>




    </android.support.design.widget.AppBarLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" ></android.support.v4.view.ViewPager>







</LinearLayout>